# tms-dedup-v3

./: .gitignore  QWEN.md  README.md  pyproject.toml
.qwen/commands/: dedup-classify.toml  dedup-resume.toml  dedup.toml
prompts/: arbitrate_pair.md  classify_section.md
src/tms_dedup/: __init__.py  batch_pairs.py  candidates.py  classify_heuristic.py  classify_merge.py  cli.py  cluster.py  config.py  features.py  io_utils.py  lexicon.py  merge_verdicts.py  normalize.py  parse.py  report.py  stopwords.py
tests/: test_candidates.py  test_classify_heuristic.py  test_cluster.py  test_end_to_end.py  test_lexicon.py  test_normalize.py
tests/fixtures/: sample_tests.tsv
