[project]
name = "tms-dedup-v3"
version = "0.1.0"
description = "Autonomous qwen CLI skill for finding semantic duplicates in a TMS Test IT test model"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
  "pymorphy3>=2.0.2,<3",
  "pymorphy3-dicts-ru>=2.4.417150,<3",
  "scikit-learn>=1.5,<2",
  "numpy>=1.26,<3",
  "scipy>=1.11,<2",
  "rapidfuzz>=3.9,<4",
  "networkx>=3.2,<4",
  "pandas>=2.2,<3",
  "pydantic>=2.7,<3",
  "typer>=0.12,<1",
  "rich>=13.7,<15",
  "orjson>=3.10,<4",
  "jinja2>=3.1,<4",
  "regex>=2024.5.15",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2,<9",
  "pytest-cov>=5,<7",
  "ruff>=0.5,<1",
]

[project.scripts]
tms-dedup = "tms_dedup.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tms_dedup"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
